<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    android:id="@+id/rootLayout"
    android:weightSum="1"
    android:gravity="center_horizontal"
    android:background="@drawable/background_for_main"
    tools:context="com.mohamed.abdelmoaty.blogproject.activites.LoginActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:id="@+id/login_logo"
        android:layout_weight="0.3"
        android:src="@drawable/wolf"
        android:layout_height="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.6"
        android:layout_marginTop="50dp"
        android:layout_height="0dp">

        <EditText
            android:layout_width="match_parent"
            android:hint="@string/your_email"
            android:id="@+id/login_email"
            android:padding="15dp"
            android:fontFamily="@font/arkhip_font"
            android:textColor="@color/blue"
            android:inputType="textEmailAddress"
            android:background="@drawable/background_for_enter"
            android:textColorHint="@color/blue"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:id="@+id/login_password"
            android:padding="15dp"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"
            android:textColor="@color/blue"
            android:fontFamily="@font/arkhip_font"
            android:textColorHint="@color/blue"
            android:background="@drawable/background_for_enter"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="match_parent"
            android:text="@string/login_to_account"
            android:background="#FFF44336"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:id="@+id/login_btn"
            android:padding="19dp"
            android:fontFamily="@font/arkhip_font"
            android:textAllCaps="false"
            android:layout_height="wrap_content" />

    </LinearLayout>



    <Button
        android:layout_width="match_parent"
        android:text="@string/need_a_new_account"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:id="@+id/register_btn"
        android:padding="15dp"
        android:textAllCaps="false"
        android:layout_weight="0.1"
        android:background="#FFF44336"
        android:fontFamily="@font/arkhip_font"
        android:layout_height="0dp" />

</LinearLayout>
