<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/btn_add"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.7"/>

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/post_title"
        android:text="@string/post_title"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintBottom_toTopOf="@id/post_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/post_desc"
        android:text="@string/post_desc"
        android:padding="10dp"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/post_title"
        app:layout_constraintBottom_toTopOf="@id/remove"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <Button
        android:id="@+id/remove"
        android:layout_width="match_parent"
        android:padding="15dp"
        android:background="@drawable/background_for_remove"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/post_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/arkhip_font"
        android:text="@string/remove_post" />

</android.support.constraint.ConstraintLayout>