<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/imageselect"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35"
        app:srcCompat="@mipmap/btn_add" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.7"/>


    <EditText
        android:id="@+id/tit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/background_for_edit"
        android:ems="10"
        android:hint="@string/post_title_00"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/blue"
        android:textColorHint="@color/blue"
        app:layout_constraintBottom_toTopOf="@id/desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <EditText
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/background_for_edit"
        android:ems="10"
        android:hint="@string/post_discription"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/blue"
        android:textColorHint="@color/blue"
        app:layout_constraintBottom_toTopOf="@id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tit" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc"
        android:background="@drawable/background_for_button"
        android:fontFamily="@font/arkhip_font"
        android:text="@string/submit_post" />

</android.support.constraint.ConstraintLayout>